# scrape-player-careers

./: pyproject.toml  scrape-player-careers.ipynb  scrape-player-careers.py
.github/workflows/: main.yml
data/: player_careers.csv
