[tool.poetry]
name = "scrape-player-careers"
version = "0.1.0"
description = ""
authors = ["Pete Brown <15838790+petebrown@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scrape_player_careers"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
requests = "^2.28.2"
numpy = "^1.24.1"
lxml = "^4.9.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
